--- a/src/main/resources/Fxml/Admin/DashboardAdmin.fxml
+++ b/src/main/resources/Fxml/Admin/DashboardAdmin.fxml
@@ -25,7 +25,7 @@
                            <children>
                               <Label styleClass="label_testo_scuro" text="Totale abbonamenti attivi:">
                                  <font>
-                                    <Font name="Arial Bold" size="20.0" />
+                                    <Font name="System Bold" size="20.0" />
                                  </font>
                               </Label>
                               <Label fx:id="labelTotaleAbbonamenti" text="3737">
@@ -53,7 +53,7 @@
                            <children>
                               <Label styleClass="label_testo_scuro" text="Certificati in attesa:">
                                  <font>
-                                    <Font size="20.0" />
+                                    <Font name="System Bold" size="20.0" />
                                  </font>
                               </Label>
                               <Label fx:id="labelCertificatiAttesa" text="2">
@@ -67,7 +67,7 @@
                            <children>
                               <Label styleClass="label_testo_scuro" text="Totale prenotati oggi:">
                                  <font>
-                                    <Font size="20.0" />
+                                    <Font name="System Bold" size="20.0" />
                                  </font>
                               </Label>
                               <Label fx:id="labelPrenotatiOggi" text="87">
